apps/sportif_v2/api-v2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v2
  namespace: sports-tracking
  labels:
    app: api-v2
    component: backend
spec:
  type: ClusterIP
  selector:
    app: api-v2
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
